update button collapse issue

--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -107,7 +107,7 @@
     border-radius: 3px;
     text-transform: uppercase;
     font-weight: 700;
-    min-width: 150px;
+    min-width: 140px;
 }
 
 .variantLinkOutline {
@@ -123,7 +123,7 @@
     border-radius: 3px;
     text-transform: uppercase;
     font-weight: 700;
-    min-width: 150px;
+    min-width: 140px;
     border: 2px solid $grey-900;
     color: $grey-900;
     background: 0 0;
@@ -250,7 +250,7 @@
     border-radius: 3px;
     text-transform: uppercase;
     font-weight: 700;
-    min-width: 150px;
+    min-width: 140px;
     margin: 0 3px;
 
     &:hover {
@@ -276,7 +276,7 @@
     border-radius: 3px;
     text-transform: uppercase;
     font-weight: 700;
-    min-width: 150px;
+    min-width: 140px;
     border: 2px solid #fff;
     color: $white;
     background: 0 0;
